[1.0.4] Downgrade the Java version and support to JDK 11